Import of LICHTKIND/Kephra-0.3.8_13 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.8_13
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.8_13.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/autosaved.conf
+++ b/share/config/global/autosaved.conf
@@ -1,20 +1,24 @@
 <dialog>
     <search>
         save_position = 1
-        position_y = 28
-        position_x = 530
+        position_y = 118
+        position_x = 449
         tooltips = 1
     </search>
     <config>
         save_position = 1
-        position_y = 90
-        position_x = 402
+        position_y = 82
+        position_x = 405
         tooltips = 1
     </config>
     button_handing = right
 </dialog>
 <search>
     <history>
+        save = 1
+        find_item = css
+        find_item = e
+        find_item = E
         find_item = üb
         find_item = a
         find_item = base
@@ -24,17 +28,13 @@
         find_item = line-nr
         find_item = _get
         find_item = _get_config
-        find_item = menu_visibility
-        find_item = switch_contexmenu_visibility
-        find_item = tabbar
-        save = 1
         length = 12
         use = 1
         remember_only_matched = 1
-        current_find_item = sdsdsdsd
+        current_find_item = css
+        replace_item = b
         replace_item = require_ok('
         replace_item = require_ok
-        replace_item = b
         replace_item = a
         replace_item = ditP
         replace_item = changes
@@ -44,13 +44,13 @@
         replace_item = for
         replace_item = language
         replace_item = with
-        current_replace_item = rk'
+        current_replace_item = b_s
     </history>
     <attribute>
-        match_regex = 1
-        match_case = 
+        match_regex = 0
+        match_case = 0
         match_whole_word = 0
-        auto_wrap = 1
+        auto_wrap = 
         in = document
         match_word_begin = 0
         fast_steps = 7
@@ -73,26 +73,19 @@
     <window>
         icon = interface/icon/app/proton.ico
         save_position = 1
-        max_number = 1
         size_y = 809
-        <default>
-            size_y = full_screen
-            position_y = 0
-            position_x = 0
-            title = $path $vnr
-            size_x = full_screen
-        </default>
-        position_y = -4
+        max_number = 1
+        position_y = -2
         stay_on_top = 0
-        position_x = 29
         title = $filepath - $appname $version
+        position_x = 30
         size_x = 741
     </window>
     <toolbar>
         <search>
             autohide = 0
-            autofocus = 1
             visible = 1
+            autofocus = 1
             file = interface/appbars.yml
             position = bottom
             node = searchbar
@@ -134,8 +127,8 @@
         max_tab_width = 25
         file_info = name
         seperator_line = 1
-        contextmenu = document_list
         info_symbol = 1
+        contextmenu = document_list
         contextmenu_use = 1
         number_tabs = 0
         <button>
@@ -214,21 +207,21 @@
             color = f5f5dd
         </caret_line>
         end_of_line_marker = 0
+        <selection>
+            back_color = 001177
+            fore_color = f3f3f3
+        </selection>
+        <caret>
+            width = 2
+            period = 500
+            color = 0000ff
+        </caret>
         <bracelight>
             visible = 1
             mode = adjacent
             bad_color = ff0000
             good_color = 0000ff
         </bracelight>
-        <caret>
-            width = 2
-            period = 500
-            color = 0000ff
-        </caret>
-        <selection>
-            back_color = 001177
-            fore_color = f3f3f3
-        </selection>
         <right_margin>
             position = 80
             style = 1
@@ -269,27 +262,27 @@
         sql = sql
         scheme = scm smd ss
         js = js
-        tcl = tcl tk itk
         cs = cs
+        tcl = tcl tk itk
         ps = ps
         fortran = f for f77 f90 f95 f2k
         css = css
-        latex = aux toc idx
         lisp = el jl lsp lisp
+        latex = aux toc idx
         pascal = pas dpr dpk dfm inc pp
         html = htm html ssi shtml xhtml tag stag
-        ada = ada ads adb
         text = txt ini nfo cfg
+        ada = ada ads adb
         context = tuo sty
         python = py pyw
         java = jav java
         ruby = rb
-        conf = conf
         nsis = nsi nsh
+        conf = conf
         asm = s asm
         perl = pl ple plx plex pm pod cgi
-        yaml = yaml yml
         as = as
+        yaml = yaml yml
         eiffel = e
         cpp = c cc cpp cxx h
         lua = lua
@@ -305,11 +298,13 @@
         tab_size = 4
     </defaultsettings>
     <history>
-        path = share\config\global\autosaved.conf
-        path = share\config\interface\mainmenu.yml
-        path = share\config\localisation\english.conf
-        path = D:\src\perl\editor\dev\base\share\config\localisation\cesky_iso.conf
+        path = D:\src\perl\editor\dev\base\share\config\localisation\english.conf
+        path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch_iso.conf
         path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch.conf
+        path = D:\src\perl\editor\dev\base\share\config\localisation\cesky_iso.conf
+        path = D:\src\perl\editor\dev\base\bin\kephra
+        path = D:\src\perl\editor\dev\base\lib\Kephra\Config\Interface.pm
+        path = share\config\localisation\english.conf
         path = D:\src\perl\editor\dev\base\t\01_compile.t
         path = D:\src\perl\editor\dev\base\share\config\global\autosaved.conf
         path = D:\src\perl\editor\dev\base\lib\Kephra\Config\Embedded.pm
@@ -353,7 +348,7 @@
     </session>
     <current>
         directory = <<EOF
-        D:\src\perl\editor\dev\base\share\config\interface\
+        share\config\global\
         EOF
     </current>
     <templates>
