--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -342,7 +342,7 @@
 					reload = Kephra::Config::Global::reload_current()
 					load-from = Kephra::Config::Global::load_from()
 					load-backup = Kephra::Config::Global::load_backup_file()
-					load-defaults = Kephra::Config::Global::load_default_file()
+					load-defaults = Kephra::Config::Global::load_defaults()
 					merge = Kephra::Config::Global::merge_with()
 					save = Kephra::Config::Global::save()
 					save-as = Kephra::Config::Global::save_as()
