--- a/share/config/localisation/cesky_iso.conf
+++ b/share/config/localisation/cesky_iso.conf
@@ -6,11 +6,11 @@
 </about>
 <app>
 	<general>
-		untitled = bez nÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¡zvu
+		untitled = bez nazvu
 	</general>
 	<menu>
 		file = Soubor
-		file_open = OtevÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â­rat Vice
+		file_open = Otevirat Vice
 		file_save = Save Vice
 		file_insert_templates = Pr(edloha
 		file_history = Historie
@@ -26,8 +26,8 @@
 		search_attributes = Attributes
 		find_functions = Find Functions
 		replace_functions = Replace Functions
-		bookmark_goto = Goto zÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¡loÃƒÆ’Ã¢â‚¬Â¦Ãƒâ€šÃ‚Â¾ka
-		bookmark_toggle = Toggle zÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¡loÃƒÆ’Ã¢â‚¬Â¦Ãƒâ€šÃ‚Â¾ka
+		bookmark_goto = Goto zaznamka
+		bookmark_toggle = Toggle zaznamka
 		document = Dokument
 		document_change = Change
 		document_syntaxmode = Syntaxmode
@@ -76,7 +76,7 @@
 			exit = Exit
 		</app>
 		<file>
-			new = NovÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â½
+			new = NovÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â½
 			open = Open ...
 			open-dir = Open Dir ...
 			reload = Reload
@@ -219,7 +219,7 @@
 			next = Replace Forward
 			all = Replace All
 			with-confirm = Replace With Confirm
-			selection = Replace Selection
+			selection = Replace into Selection
 		</replace>
 		<goto>
 			last-edit = Goto Last Edit
@@ -499,13 +499,13 @@
 		</file>
 		<edit>
 			<changes>
-				undo = mache letzte ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderung im Dokument rÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¤ngig
-				redo = zuletzt rÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¤ngig gemachte ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderung wiederholen
-				undo-several = mache mehrere ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderungen rÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¤ngig
-				redo-several = bringe mehrere ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderungen wieder
-				goto-begin = bringe Zustand vor allen ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderungen zurÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¼ck
-				goto-end = hole alle gemachte ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderungen wieder
-				delete = lÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¶sche alle Aufzeichnungen ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¼ber ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¾nderungen
+				undo = mache letzte ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderung im Dokument rÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¤ngig
+				redo = zuletzt rÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¤ngig gemachte ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderung wiederholen
+				undo-several = mache mehrere ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderungen rÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¼ckgÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¤ngig
+				redo-several = bringe mehrere ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderungen wieder
+				goto-begin = bringe Zustand vor allen ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderungen zurÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¼ck
+				goto-end = hole alle gemachte ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderungen wieder
+				delete = lÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¶sche alle Aufzeichnungen ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¼ber ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¾nderungen
 			</changes>
 			cut = cut selected text and store it in the clipboard
 			copy = copy selected text to the clipboard
@@ -818,7 +818,7 @@
 					deutsch = open german translation of the application texts
 					deutsch-iso = open german translation with ISO charset
 					deutsch-utf = open german translation with UTF16 charset
-					cesky-iso = ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¶ffne tschechische ÃƒÆ’Ã†â€™Ãƒâ€¦Ã¢â‚¬Å“bersetzung mit ISO 
+					cesky-iso = ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¶ffne tschechische ÃƒÆ’Ã†â€™Ãƒâ€ Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œbersetzung mit ISO 
 					cesky-utf = open czech translation with UTF16 charset
 				</localisation>
 				<syntaxmode>
