--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -219,7 +219,7 @@
 			next = Ersetze Vorwaerts
 			all = Ersetze Alles
 			with-confirm = Bestaetige Ersetzen
-			selection = Markierung Ersetzen
+			selection = Zu Markierung Ersetzen
 		</replace>
 		<goto>
 			last-edit = Zur letzten Bearbeitung
