--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -219,7 +219,7 @@
 			next = Ersetze Vorwärts
 			all = Ersetze Alles
 			with-confirm = Bestätige Ersetzen
-			selection = Markierung Ersetzen
+			selection = Zu Markierung Ersetzen
 		</replace>
 		<goto>
 			last-edit = Zur letzten Bearbeitung
