--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -219,7 +219,7 @@
 			next = Replace Forward
 			all = Replace All
 			with-confirm = Replace With Confirm
-			selection = Replace Selection
+			selection = Replace into Selection
 		</replace>
 		<goto>
 			last-edit = Goto Last Edit
