--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,56 +1,59 @@
 current_nr = 4
 <document>
-    codepage = 
-    cursor_pos = 184
-    file_path = D:\src\perl\editor\dev\base\bin\kephra
-    edit_pos = 525
-    readonly = protect
-    syntaxmode = perl
-    tab_use = 1
-    EOL = cr+lf
-    tab_size = 4
-</document>
-<document>
-    codepage = 
-    cursor_pos = 109
+    cursor_pos = 8967
     file_path = D:\src\perl\editor\dev\base\Changes
-    edit_pos = 203
-    readonly = protect
+    codepage = 
+    edit_pos = 115
     syntaxmode = none
+    readonly = protect
     tab_use = 1
     EOL = cr+lf
     tab_size = 4
 </document>
 <document>
-    codepage = 
-    cursor_pos = 214
+    cursor_pos = 4
     file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
-    edit_pos = 213
-    readonly = protect
+    codepage = 
+    edit_pos = 469
     syntaxmode = perl
+    readonly = protect
     tab_use = 1
     EOL = cr+lf
     tab_size = 4
 </document>
 <document>
+    cursor_pos = 3968
+    file_path = share\config\interface\mainmenu.yml
     codepage = 
-    cursor_pos = 0
-    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Config\Interface.pm
-    edit_pos = 0
-    readonly = protect
-    syntaxmode = perl
-    tab_use = 1
-    EOL = cr+lf
-    tab_size = 4
-</document>
-<document>
-    cursor_pos = 0
-    codepage = 
-    file_path = D:\src\perl\editor\dev\base\share\config\interface\commands.conf
     edit_pos = -1
+    config_file = 1
+    syntaxmode = yaml
     readonly = protect
-    syntaxmode = conf
     tab_use = 1
-    tab_size = 4
     EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 1955
+    file_path = share\config\interface\contextmenus.yml
+    codepage = 
+    edit_pos = 0
+    config_file = 1
+    syntaxmode = yaml
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 395
+    file_path = share\config\global\autosaved.conf
+    codepage = 
+    edit_pos = 7053
+    config_file = 1
+    syntaxmode = conf
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
 </document>
