--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
-name: kephra
-version: 0.3.8.4
+name: Kephra
+version: 0.3.8.9
 abstract: crossplatform GUI Text-Editor
 author: lichtkind@cpan.org
 license: gpl
@@ -11,7 +11,7 @@ no_index:
     - t
 requires: 
   perl: 5.006
-  Wx:   0
+  Wx:   0.70
   Hash-Merge: 0
   Clone: 0.18
   YAML: 0
