--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -11,7 +11,7 @@ current_nr = 4
     tab_size = 4
 </document>
 <document>
-    cursor_pos = 4
+    cursor_pos = 0
     file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
     codepage = 
     edit_pos = 469
@@ -22,36 +22,33 @@ current_nr = 4
     tab_size = 4
 </document>
 <document>
-    cursor_pos = 3968
-    file_path = share\config\interface\mainmenu.yml
+    cursor_pos = 67
+    file_path = share\help\english\this_version.txt
     codepage = 
-    edit_pos = -1
-    config_file = 1
-    syntaxmode = yaml
+    edit_pos = 67
+    syntaxmode = none
     readonly = protect
     tab_use = 1
     EOL = cr+lf
     tab_size = 4
 </document>
 <document>
-    cursor_pos = 1955
-    file_path = share\config\interface\contextmenus.yml
+    cursor_pos = 0
+    file_path = share\help\english\all_feature.txt
+    codepage = 
+    edit_pos = 38
+    syntaxmode = none
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 0
+    file_path = share\help\english\special_feature.txt
     codepage = 
     edit_pos = 0
-    config_file = 1
-    syntaxmode = yaml
-    readonly = protect
-    tab_use = 1
-    EOL = cr+lf
-    tab_size = 4
-</document>
-<document>
-    cursor_pos = 395
-    file_path = share\config\global\autosaved.conf
-    codepage = 
-    edit_pos = 7053
-    config_file = 1
-    syntaxmode = conf
+    syntaxmode = none
     readonly = protect
     tab_use = 1
     EOL = cr+lf
