Import of LICHTKIND/Kephra-0.3.9 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/global/autosaved.conf
+++ b/share/config/global/autosaved.conf
@@ -9,7 +9,7 @@
         save_position = 1
         current_panel_nr = 1
         position_y = 82
-        position_x = 405
+        position_x = 524
         tooltips = 1
     </config>
     button_handing = right
@@ -53,8 +53,7 @@
             size = 16
         </main>
     </toolbar>
-    localisation_file = deutsch_iso.conf
-    iconset_path = interface/icon/set/jenne/
+    localisation_file = english.conf
     <contextmenu>
         defaultfile = interface/contextmenus.yml
         <id>
@@ -70,6 +69,7 @@
             document_list = &document_change
         </id>
     </contextmenu>
+    iconset_path = interface/icon/set/jenne/
     <tabbar>
         visible = 1
         insert = rightmost
@@ -88,14 +88,14 @@
         switch_back = 1
         mark_configs = 1
     </tabbar>
-    error_output = dialog
     <statusbar>
         visible = 1
         interactive = 1
         file = interface/appbars.yml
-        msg_nr = 2
+        msg_nr = 1
         node = statusbar
     </statusbar>
+    error_output = dialog
     xp_style = 1
     <commandlist>
         file = interface/commands.conf
@@ -145,8 +145,8 @@
         match_whole_word = 0
         auto_wrap = 1
         in = document
-        match_word_begin = 0
         fast_steps = 7
+        match_word_begin = 0
         incremental = 1
     </attribute>
     <hyper>
@@ -158,14 +158,14 @@
     </bookmark>
 </search>
 <texts>
-    credits = deutsch/lizenz/anerkennung.txt
-    version = deutsch/diese_version.txt
-    keymap = deutsch/tastaturbelegung.txt
-    license = deutsch/lizenz/gpl.txt
-    feature = deutsch/alle_funktionen.txt
-    navigation = deutsch/navigation.txt
-    special = deutsch/besondere_funktionen.txt
-    welcome = deutsch/willkommen.txt
+    credits = english/license/credits.txt
+    version = english/this_version.txt
+    keymap = english/keymap.txt
+    license = english/license/gpl.txt
+    navigation = english/navigation.txt
+    feature = english/all_feature.txt
+    special = english/special_feature.txt
+    welcome = english/welcome.txt
 </texts>
 <editpanel>
     line_wrap = 0
@@ -194,6 +194,7 @@
         </brace>
         indention = 1
     </auto>
+    word_chars = $%-:@_abcdefghijklmnopqrstuvwxyzäöüßABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜ0123456789
     <indicator>
         <whitespace>
             visible = 1
@@ -229,7 +230,6 @@
             color = ccccff
         </right_margin>
     </indicator>
-    word_chars = $%-:@_abcdefghijklmnopqrstuvwxyzäöüßABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜ0123456789
     <margin>
         fold = 0
         <linenumber>
@@ -255,10 +255,10 @@
         vbs = vbs dsm
         php = php php3 php4 phtml
         xml = xml xsl svg xul xsd dtd xslt axl xrc rdf
-        haskell = hs
         sh = bsh sh
-        idl = idl odl
+        haskell = hs
         tex = tex sty
+        idl = idl odl
         vb = vb bas frm cls ctl pag dsr dob
         sql = sql
         scheme = scm smd ss
@@ -288,20 +288,6 @@
         cpp = c cc cpp cxx h
         lua = lua
     </endings>
-    <history>
-        path = share\help\deutsch\willkommen.txt
-        path = share\help\english\welcome.txt
-        path = share\config\global\autosaved.conf
-        path = share\help\deutsch\diese_version.txt
-        path = share\help\english\license\credits.txt
-        path = share\help\english\navigation.txt
-        path = share\help\english\this_version.txt
-        path = share\config\interface\mainmenu.yml
-        path = share\config\interface\contextmenus.yml
-        path = D:\src\perl\editor\dev\base\share\config\localisation\english.conf
-        path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch_iso.conf
-        length = 11
-    </history>
     <defaultsettings>
         EOL_open = auto
         readonly = protect
@@ -312,6 +298,30 @@
         tab_use = 1
         tab_size = 4
     </defaultsettings>
+    <history>
+        path = D:\src\perl\editor\dev\base\Changes
+        path = share\help\english\this_version.txt
+        path = share\help\english\all_feature.txt
+        path = share\help\english\special_feature.txt
+        path = D:\src\perl\editor\dev\base\lib\Kephra.pm
+        path = D:\src\perl\editor\dev\base\share\config\localisation\cesky_iso.conf
+        path = share\help\english\welcome.txt
+        path = share\help\deutsch\willkommen.txt
+        path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch.conf
+        path = D:\src\perl\editor\dev\base\share\config\localisation\english.conf
+        path = D:\src\perl\editor\dev\base\share\config\localisation\deutsch_iso.conf
+        length = 11
+    </history>
+    <open>
+        notify_change = 30
+        only_text = 0
+        in_current_dir = 1
+        into_only_empty_doc = 1
+        into_empty_doc = 0
+        each_once = 1
+        dir_recursive = 1
+        single_doc = 0
+    </open>
     <save>
         tilde_backup = 0
         reload_config = 1
@@ -325,16 +335,6 @@
         unchanged_all = 0
         b4_close = ask
     </save>
-    <open>
-        notify_change = 30
-        only_text = 0
-        in_current_dir = 1
-        into_only_empty_doc = 1
-        into_empty_doc = 0
-        each_once = 1
-        dir_recursive = 1
-        single_doc = 0
-    </open>
     <group>
         web = css html php perl js
         text = text
@@ -350,7 +350,7 @@
     </session>
     <current>
         directory = <<EOF
-        share\help\english\
+        D:\src\perl\editor\dev\base\
         EOF
     </current>
     <templates>
