--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -863,6 +863,15 @@
 	</help>
 </commandlist>
 <dialog>
+	<config>
+		title = Globale Einstellungen
+		<panel>
+			general = Allgemein
+			main_window = Hauptfenster
+			edit = Editfeld
+			files = Dateien
+		</panel>
+	</config>
 	<config_file>
 		load = Konfiguration aus Datei laden :
 		save = Aktuelle Konfiguration als Datei speichern :
@@ -983,15 +992,6 @@
 			replace_backward = ersetzen und rueckwaerts suchen
 		</hint>
 	</search>
-	<settings>
-		title = Einstellungen
-		<panel>
-			general = Allgemein
-			main_window = Hauptfenster
-			edit = Editfeld
-			files = Dateien
-		</panel>
-	</settings>
 </dialog>
 <key>
 	back = Rueck
