--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -863,8 +863,17 @@
 	</help>
 </commandlist>
 <dialog>
+	<config>
+		title = Global Settings
+		<panel>
+			general = General
+			main_window = Main Window
+			edit = Edit Panel
+			files = Files
+		</panel>
+	</config>
 	<config_file>
-		load = load configuration from the file :
+		load = load overall configuration from the file :
 		save = store current program configuration into the file :
 	</config_file>
 	<edit>
@@ -983,15 +992,6 @@
 			replace_backward = replace and find previous
 		</hint>
 	</search>
-	<settings>
-		title = Configuration Dialog
-		<panel>
-			general = General
-			main_window = Main Window
-			edit = Edit Panel
-			files = Files
-		</panel>
-	</settings>
 </dialog>
 <key>
 	back = Back
