--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,1 +1,34 @@
 current_nr = 0
+<document>
+    cursor_pos = 0
+    file_path = share\help\english\special_feature.txt
+    codepage = 
+    edit_pos = -1
+    readonly = protect
+    syntaxmode = none
+    tab_use = 1
+    tab_size = 4
+    EOL = cr+lf
+</document>
+<document>
+    cursor_pos = 0
+    file_path = D:\src\perl\editor\dev\base\share\help\english\all_feature.txt
+    codepage = 
+    edit_pos = -1
+    syntaxmode = none
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 0
+    file_path = D:\src\perl\editor\dev\base\share\help\english\this_version.txt
+    codepage = 
+    edit_pos = -1
+    syntaxmode = none
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
