Import of LICHTKIND/Kephra-0.3.9_2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9_2
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9_2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/autosaved.conf
+++ b/share/config/global/autosaved.conf
@@ -72,14 +72,14 @@
         responsive = 1
     </menubar>
     <window>
-        icon = interface/icon/app/proton.ico
+        icon = interface/icon/app/proton.xpm
         save_position = 1
         size_y = 809
         max_number = 1
-        position_y = -10
+        position_y = -4
         stay_on_top = 0
         title = $filepath - $appname $version
-        position_x = 20
+        position_x = 29
         size_x = 741
     </window>
     <toolbar>
@@ -289,6 +289,9 @@
         lua = lua
     </endings>
     <history>
+        path = D:\src\perl\editor\dev\base\share\config\interface\icon\splash\start_kephra.xpm
+        path = D:\src\perl\editor\dev\base\bin\kephra
+        path = C:\DOCUME~1\adam\LOCALS~1\Temp\PPM-1208628613
         path = share\help\deutsch\besondere_funktionen.txt
         path = share\help\deutsch\diese_version.txt
         path = D:\src\perl\editor\dev\base\share\help\english\welcome.txt
@@ -297,9 +300,6 @@
         path = share\help\deutsch\willkommen.txt
         path = share\help\deutsch\alle_funktionen.txt
         path = share\help\deutsch\lizenz\anerkennung.txt
-        path = D:\src\perl\editor\dev\base\Changes
-        path = share\help\english\this_version.txt
-        path = share\help\english\all_feature.txt
         length = 11
     </history>
     <defaultsettings>
@@ -350,7 +350,7 @@
     </session>
     <current>
         directory = <<EOF
-        share\help\english\
+        D:\src\perl\editor\dev\base\share\help\english\
         EOF
     </current>
     <templates>
